Arregle los enlaces de home

--- a/Actividad 1 Html/Secciones/contacto.html
+++ b/Actividad 1 Html/Secciones/contacto.html
@@ -13,7 +13,7 @@
     <p>almironemiliano@gmail</p>
     
     <!-- boton de regreso -->
-    <a href="/Actividad 1 Html/index.html">Home</a>
+    <a href="G:\FACULTAD\2 AÑO\Practica 1\Actividad 1 Html/index.html">Home</a>
 
 </body>
 </html>
