--- a/Actividad 1 Html/Secciones/about.html
+++ b/Actividad 1 Html/Secciones/about.html
@@ -18,7 +18,7 @@
     </p>
     
     <!-- boton de regreso -->
-    <a href="/Actividad 1 Html/index.html">Home</a>
+    <a href="G:\FACULTAD\2 AÑO\Practica 1\Actividad 1 Html/index.html">Home</a>
 
     
 </body>
