--- a/Actividad 1 Html/Secciones/cv.html
+++ b/Actividad 1 Html/Secciones/cv.html
@@ -25,7 +25,7 @@
     </ul>
     
     <!-- boton de regreso -->
-    <a href="/Actividad 1 Html/index.html">Home</a>
+    <a href="G:\FACULTAD\2 AÑO\Practica 1\Actividad 1 Html/index.html">Home</a>
 
 </body>
 </html>
